Fixed vertical alignment of \stackrel

--- a/src/css/math.less
+++ b/src/css/math.less
@@ -410,7 +410,7 @@
     -webkit-align-items: center;
     align-items: center;
 
-    vertical-align: top;
+    vertical-align: middle;
   }
 
   .mq-overarrow {
